--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,6 +11,7 @@ steps:
  - task: Docker@2
    displayName: Build an image
    inputs:
+     containerRegistry: 'DockerHubKoen'
      repository: $(imageName)
-     command: build
+     command: 'buildAndPush'
      Dockerfile: app/Dockerfile
